test_regress/t/t_tagged.out
%Error-UNSUPPORTED: t/t_tagged.v:34:13: Unsupported: matches with non-tagged pattern
   34 |       if (u matches tagged m_int .n) $stop;
      |             ^~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged.v:45:13: Unsupported: matches with non-tagged pattern
   45 |       if (u matches tagged m_int .n) if (n != 123) $stop;
      |             ^~~~~~~
%Error: Exiting due to
